UCLALIB-222: Fixed Long email addresses do not wrap as screensize reduces on staff pags

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
@@ -4152,6 +4152,7 @@ img[src="images/up.png"] {
   margin: 20px 0;
   overflow: hidden;
   padding-left: 1.8em;
+  word-wrap: break-word;
 }
 .staff-profile__phone [class^="icon-"],
 .staff-profile__email [class^="icon-"] {
