--- a/www/sites/all/themes/uclalib_omega/sass/components/_staff_profile.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_staff_profile.scss
@@ -32,6 +32,7 @@
   margin: 20px 0;
   overflow: hidden;
   padding-left: 1.8em;
+  word-wrap: break-word;
 
   [class^="icon-"] {
     color: $ucla-dark-gray;
